# datahaven

./: .gitignore  .gitmodules  CLAUDE.md  EIGENLAYER.md  PLAN.md  README.md  REVERSE_MAPPING_PLAN.md  biome.json  pallet_grandpa_benchmarking.md
operator/: .dockerignore  .gitignore  BENCHMARKING.md  BENCHMARKING_COMPARISON_AND_PLAN.md  Cargo.toml  DOCKER-COMPOSE.md  Dockerfile  Dockerfile.alt  MOONBEAM_BENCHMARKING_ANALYSIS.md  README.md  docker-compose.yml  rust-toolchain.toml
operator/.cargo/: audit.toml  config.toml
operator/benchmarking/: frame-weight-template.hbs
operator/node/: Cargo.toml  README.md
operator/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  config.rs  consensus.rs  eth.rs  main.rs  rpc.rs  service.rs
operator/node/src/chain_spec/: mainnet.rs  mod.rs  stagenet.rs  testnet.rs
operator/pallets/commitments/: Cargo.toml
operator/pallets/commitments/src/: lib.rs
operator/pallets/datahaven-native-transfer/: Cargo.toml  README.md
operator/pallets/datahaven-native-transfer/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
operator/pallets/ethereum-client/: Cargo.toml
operator/pallets/ethereum-client/fixtures/: Cargo.toml
operator/pallets/ethereum-client/src/: debug_merkle.rs  functions.rs  impls.rs  lib.rs  mock.rs  mock_electra.rs  tests.rs  tests_electra.rs  types.rs
operator/pallets/external-validator-slashes/: Cargo.toml
operator/pallets/external-validator-slashes/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
operator/pallets/external-validators/: Cargo.toml
operator/pallets/external-validators-rewards/: Cargo.toml
operator/pallets/external-validators-rewards/runtime-api/: Cargo.toml
operator/pallets/external-validators-rewards/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
operator/pallets/external-validators-slashes/: Cargo.toml
operator/pallets/external-validators-slashes/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
operator/pallets/external-validators/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs
operator/pallets/grandpa-benchmarking/: Cargo.toml
operator/pallets/grandpa-benchmarking/src/: benchmarking.rs  lib.rs
operator/pallets/inbound-queue/: Cargo.toml  README.md
operator/pallets/inbound-queue-v2/: Cargo.toml
operator/pallets/inbound-queue-v2/fixtures/: Cargo.toml
operator/pallets/inbound-queue-v2/src/: benchmarking.rs  lib.rs  message_processors.rs  mock.rs  test.rs  weights.rs
operator/pallets/inbound-queue/fixtures/: Cargo.toml
operator/pallets/inbound-queue/src/: envelope.rs  lib.rs  mock.rs  test.rs  weights.rs  xcm_message_processor.rs
operator/pallets/outbound-commitment-store/: Cargo.toml
operator/pallets/outbound-commitment-store/src/: lib.rs
operator/pallets/outbound-queue-v2/: Cargo.toml
operator/pallets/outbound-queue-v2/runtime-api/: Cargo.toml
operator/pallets/outbound-queue-v2/src/: api.rs  benchmarking.rs  fixture.rs  lib.rs  mock.rs  process_message_impl.rs  send_message_impl.rs  test.rs  types.rs
operator/pallets/proxy-genesis-companion/: Cargo.toml
operator/pallets/proxy-genesis-companion/src/: lib.rs  mock.rs  tests.rs
operator/pallets/session-benchmarking/: Cargo.toml
operator/pallets/session-benchmarking/src/: benchmarking.rs  lib.rs
operator/pallets/system/: Cargo.toml
operator/pallets/system-v2/: Cargo.toml
operator/pallets/system-v2/runtime-api/: Cargo.toml
operator/pallets/system-v2/src/: api.rs  benchmarking.rs  lib.rs  mock.rs  tests.rs
operator/pallets/system/runtime-api/: Cargo.toml
operator/pallets/system/src/: api.rs  benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs
operator/pallets/validator-set/: Cargo.toml
operator/pallets/validator-set/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
operator/precompiles/batch/: Cargo.toml
operator/precompiles/batch/src/: lib.rs  mock.rs  tests.rs
operator/precompiles/call-permit/: Cargo.toml
operator/precompiles/call-permit/src/: lib.rs  mock.rs  tests.rs
operator/precompiles/collective/: Cargo.toml
operator/precompiles/collective/src/: lib.rs  mock.rs
operator/precompiles/conviction-voting/: Cargo.toml
operator/precompiles/conviction-voting/src/: lib.rs  mock.rs  tests.rs
operator/precompiles/datahaven-native-transfer/: Cargo.toml  DataHavenNativeTransfer.sol  README.md
operator/precompiles/datahaven-native-transfer/src/: lib.rs  mock.rs  tests.rs
operator/precompiles/erc20-balances/: Cargo.toml  ERC20.sol  Permit.sol
operator/precompiles/erc20-balances/src/: eip2612.rs  lib.rs  mock.rs  tests.rs
operator/precompiles/identity/: Cargo.toml
operator/precompiles/precompile-registry/: Cargo.toml
operator/precompiles/preimage/: Cargo.toml
operator/precompiles/proxy/: Cargo.toml  Proxy.sol
operator/precompiles/randomness/: Cargo.toml
operator/precompiles/referenda/: Cargo.toml
operator/primitives/bridge/: Cargo.toml
operator/runtime/: Cargo.toml
operator/runtime/common/: Cargo.toml
operator/runtime/constants/: Cargo.toml
operator/runtime/devnet/: Cargo.toml
operator/runtime/mainnet/: Cargo.toml  build.rs
operator/runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
operator/runtime/stagenet/: Cargo.toml
operator/runtime/testnet/: Cargo.toml
operator/scripts/: benchmark-single.sh  build-runtime-srtool.sh  docker-entrypoint.sh  docker-healthcheck.sh  docker-prepare.sh  run-benchmarks.sh  sort-cargo-deps.sh  test_message_encoding.sh  verify-licenses.sh
operator/test/assets/: beacon-relay.json  genesis.json
operator/test/config/: beefy-relay.json  zombie-datahaven-local.toml  zombie-flamingo-local.toml
operator/test/helpers/: fetchBeefyBlock.js  getBeefyBlock.js  package-lock.json  package.json  submit-checkpoint.js
operator/test/scripts/: build-binary.sh  build-contracts.sh  build-ethereum.sh  deploy-contracts.sh  deploy-ethereum.sh  deploy-flamingo.sh  force-beacon-checkpoint.sh  generate-beefy-checkpoint.sh  set-env.sh  start-relayer.sh  start-testnet.sh  test_message_encoding.sh
(+999 files in other folders)
