[package]
name = "datahaven-runtime"
description = "datahaven runtime template built with polkadot-sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
datahaven-runtime-common = { workspace = true }
fp-account = { workspace = true, features = ["serde"] }
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde", "try-runtime"] }
frame-benchmarking = { optional = true, workspace = true }
frame-executive = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
frame-support = { features = ["experimental"], workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-system = { workspace = true }
frame-try-runtime = { optional = true, workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
pallet-authorship = { workspace = true }
pallet-babe = { workspace = true }
pallet-balances = { workspace = true }
pallet-beefy = { workspace = true }
pallet-beefy-mmr = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-identity = { workspace = true }
pallet-im-online = { workspace = true }
pallet-mmr = { workspace = true }
pallet-multisig = { workspace = true }
pallet-offences = { workspace = true }
pallet-preimage = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-session = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-utility = { workspace = true }
pallet-validator-set = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
snowbridge-beacon-primitives = { workspace = true }
snowbridge-pallet-ethereum-client = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-babe = { features = ["serde"], workspace = true }
sp-consensus-beefy = { features = ["serde"], workspace = true }
sp-consensus-grandpa = { features = ["serde"], workspace = true }
sp-core = { features = ["serde"], workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { features = ["serde"], workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { features = ["serde"], workspace = true }

# StorageHub
## StorageHub and Polkadot deps
pallet-bucket-nfts = { workspace = true }
pallet-nfts = { workspace = true }
pallet-cr-randomness = { workspace = true }
pallet-file-system = { workspace = true }
pallet-file-system-runtime-api = { workspace = true }
pallet-parameters = { workspace = true }
pallet-payment-streams = { workspace = true }
pallet-payment-streams-runtime-api = { workspace = true }
pallet-proofs-dealer = { workspace = true }
pallet-proofs-dealer-runtime-api = { workspace = true }
pallet-randomness = { workspace = true }
pallet-storage-providers = { workspace = true }
pallet-storage-providers-runtime-api = { workspace = true }
shp-constants = { workspace = true }
shp-file-metadata = { workspace = true }
shp-traits = { workspace = true }
shp-treasury-funding = { workspace = true }
shp-forest-verifier = { workspace = true }
shp-file-key-verifier = { workspace = true }
shp-data-price-updater = { workspace = true }
sp-trie = { workspace = true }
## Misc
smallvec = { workspace = true }
num-bigint = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
storage-hub = []
default = ["std"]
std = [
    "codec/std",
    "datahaven-runtime-common/std",
    "fp-account/std",
    "frame-benchmarking?/std",
    "frame-executive/std",
    "frame-metadata-hash-extension/std",
    "frame-support/std",
    "frame-system-benchmarking?/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime?/std",
    "pallet-authorship/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "pallet-beefy-mmr/std",
    "pallet-beefy/std",
    "pallet-ethereum/std",
    "pallet-evm-chain-id/std",
    "pallet-evm/std",
    "pallet-grandpa/std",
    "pallet-identity/std",
    "pallet-im-online/std",
    "pallet-mmr/std",
    "pallet-multisig/std",
    "pallet-offences/std",
    "pallet-preimage/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-utility/std",
    "pallet-validator-set/std",

    # StorageHub
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-bucket-nfts/std",
    "pallet-nfts/std",
	"pallet-cr-randomness/std",
	"pallet-file-system/std",
	"pallet-file-system-runtime-api/std",
	"pallet-parameters/std",
	"pallet-payment-streams/std",
	"pallet-payment-streams-runtime-api/std",
	"pallet-proofs-dealer/std",
	"pallet-proofs-dealer-runtime-api/std",
	"pallet-randomness/std",
	"pallet-session/std",
	"pallet-storage-providers/std",
	"pallet-storage-providers-runtime-api/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
    "shp-constants/std",
	"shp-file-metadata/std",
	"shp-forest-verifier/std",
	"shp-traits/std",
	"shp-treasury-funding/std",
    "shp-file-key-verifier/std",

    "polkadot-primitives/std",
    "polkadot-runtime-common/std",
    "scale-info/std",
    "serde_json/std",
    "snowbridge-beacon-primitives/std",
    "snowbridge-pallet-ethereum-client/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-babe/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-keyring/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "substrate-wasm-builder",
]

runtime-benchmarks = [
    "datahaven-runtime-common/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-beefy-mmr/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-mmr/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-offences/runtime-benchmarks",
    "pallet-preimage/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "polkadot-primitives/runtime-benchmarks",
    "polkadot-runtime-common/runtime-benchmarks",
    "snowbridge-pallet-ethereum-client/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = [
    "fp-self-contained/try-runtime",
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-babe/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-beefy-mmr/try-runtime",
    "pallet-beefy/try-runtime",
    "pallet-ethereum/try-runtime",
    "pallet-evm/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-identity/try-runtime",
    "pallet-im-online/try-runtime",
    "pallet-mmr/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-offences/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-session/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-utility/try-runtime",
    "polkadot-runtime-common/try-runtime",
    "snowbridge-pallet-ethereum-client/try-runtime",
    "sp-runtime/try-runtime",
]

fast-runtime = [
    "datahaven-runtime-common/fast-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
