[package]
name = "pallet-commitments"
version = "0.1.0"
description = "Simple pallet for storing the latest outbound queue commitment"
authors = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]